Bug fixes and styling additions. Have made the layout responsive on mobile and fixed the delete campaign bug

--- a/src/block/style.scss
+++ b/src/block/style.scss
@@ -158,6 +158,21 @@
 .imageAndTagline{
    display: flex;
    justify-content: space-between;
+   margin: 1rem;
+   align-items: flex-start;
+}
+
+@media only screen and (max-width: 830px) {
+   .imageAndTagline{
+      display: block;
+   }
+   .image_types{
+      display:flex;
+   }
+}
+
+.image_types{
+   margin: 1rem;
 }
 
 .tagline{
@@ -169,4 +184,5 @@
 
 .textAndButton{
    padding: 5px;
+   margin: 1rem;
 }
